<resources>
    <string name="app_name">Lublin Tour Guide</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Lublin, Poland</string>
    <string name="nav_header_subtitle">www.lublin.eu</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="pearl">Lublin pearl of the east...</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_worth_to_visit">Worth to visit</string>
    <string name="nav_museums">Museums</string>
    <string name="nav_culture">Culture</string>
    <string name="nav_attractions">Attractions</string>
    <string name="nav_coffee_and_restaurants">Coffee and restaurants</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Worth to visit</item>
        <item>Museums</item>
        <item>Culture</item>
        <item>Attractions</item>
        <item>coffee and restaurants</item>
    </string-array>

    <!--Attraction places names -->
    <string name="aquL">Aqua Lublin - swimmingpool complex</string>
    <string name="stadium">Sport stadium - Arena Lublin</string>
    <string name="speedway">Speedway stadium Motor Lublin</string>

    <!--Coffee and restaurants  places names -->
    <string name="paw">Devil\'s paw Restaurant</string>
    <string name="tryb">Trybunalska City Pub</string>
    <string name="pub">Irish Pub</string>

    <!--Culture  places names -->
    <string name="jazz">Lublin Jazz Festival</string>
    <string name="carnival">Carnival of the magicians</string>
    <string name="theatre">The Old Theater</string>

    <!--Museums  places names -->
    <string name="majdanek">The State Museum at Majdanek</string>
    <string name="village">The Open Air Village Museum</string>
    <string name="cmus">The Lublin Museum</string>

    <!--Worth to visit  places names -->
    <string name="oldt">Old Town</string>
    <string name="castle">The Castle</string>
    <string name="tower">Trinitarian tower</string>

    <!--Toolbar title-->
    <string name="ToolbarTitle">Lublin Tour Guide</string>
</resources>
