<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_worth_to_visit"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/nav_worth_to_visit" />
        <item
            android:id="@+id/nav_museums"
            android:icon="@drawable/ic_account_balance_black_24dp"
            android:title="@string/nav_museums" />
        <item
            android:id="@+id/nav_culture"
            android:icon="@drawable/ic_cloud_queue_black_24dp"
            android:title="@string/nav_culture" />
        <item
            android:id="@+id/nav_attraction"
            android:icon="@drawable/ic_supervisor_account_black_24dp"
            android:title="@string/nav_attractions" />
        <item
            android:id="@+id/nav_coffee_and_restaurants"
            android:icon="@drawable/ic_local_drink_black_24dp"
            android:title="@string/nav_coffee_and_restaurants" />
    </group>


</menu>
